--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h1>Site here</h1>
-	<p>some text</p>
-	<p>la la la</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum rerum ex ipsa temporibus illo pariatur sunt officia ullam omnis dolorem impedit nihil voluptatem, iure aut, voluptate excepturi. Quibusdam architecto, hic.</p>
 </body>
 </html>
